Celtics page updates

--- a/Home page.html
+++ b/Home page.html
@@ -7,10 +7,13 @@
   <body>
     <h1>Welcome to the Boston Sports Center!</h1>
     <div class="navbar">
-      <a href="Celtics Page.html"><img src="Final Project Images/Boston_Celtics.svg.jpg" alt= Celtics logo width="200"/></a></div>
-      <a href="page2.html">Page 2</a></div>
-      <a href="page3.html">Page 3</a></div>
-     <a href="page4.html">Page 4</a></div>
-    </div>
+    <a href="Celtics/Celtics Page.html"><img src="Celtics/Boston_Celtics.svg.jpg" alt= Celtics logo width="200"/></a>
+    <a href="Bruins Page.html"><img src="Final Project Images/Boston_Bruins.svg.jpg" alt= Bruins logo width="200"/></a>
+    <a href="Patriots Page.html"><img src="Final Project Images/Patriots Logo1.jpg" alt= Patriots logo width="220"/></a>
+    <a href="Red Sox Page.html"><img src="Final Project Images/RedSox.svg.jpg" alt= Red Sox logo width="200"/></a>
+      </div>
+     <h2>Click on a page!</h2> 
+
+   
   </body>
 </html>
