--- a/Home page.html
+++ b/Home page.html
@@ -3,14 +3,17 @@
   <head>
     <title>Boston Sports Center</title>
     <link rel="stylesheet" href="Homepage.css" />
+    <style>
+      body {background-color:gray;}
+      </style>
   </head>
   <body>
     <h1>Welcome to the Boston Sports Center!</h1>
     <div class="navbar">
-    <a href="Celtics/Celtics Page.html"><img src="Celtics/Boston_Celtics.svg.jpg" alt= Celtics logo width="200"/></a>
-    <a href="Bruins Page.html"><img src="Final Project Images/Boston_Bruins.svg.jpg" alt= Bruins logo width="200"/></a>
-    <a href="Patriots Page.html"><img src="Final Project Images/Patriots Logo1.jpg" alt= Patriots logo width="220"/></a>
-    <a href="Red Sox Page.html"><img src="Final Project Images/RedSox.svg.jpg" alt= Red Sox logo width="200"/></a>
+    <a href="Celtics/Celtics Page copy.html"><img src="Celtics/Boston_Celtics.svg.jpg" alt= Celtics logo width="250"/></a>
+    <a href="Bruins/Bruins Page.html"><img src="Bruins/Boston_Bruins.svg.jpg" alt= Bruins logo width="250"/></a>
+    <a href="Patriots/Patriots Page.html"><img src="Patriots/Patriots Logo1.jpg" alt= Patriots logo width="270"/></a>
+    <a href="Red Sox/Red Sox Page.html"><img src="Red Sox/RedSox.svg.jpg" alt= Red Sox logo width="250"/></a>
       </div>
      <h2>Click on a page!</h2> 
 
